adding config/database.yml to the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
-
+config/database.yml
 ## Environment normalisation:
 /vendor/bundle
 
