--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 # Ignore bundler config.
 /.bundle
 # Ignore solr data files
-/solr/development
+/solr/data
+/solr/development/data
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
