--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -3,7 +3,7 @@ production:
     hostname: localhost
     port: 8983
     log_level: WARNING
-    path: /solr
+    path: /solr/production
     # read_timeout: 2
     # open_timeout: 0.5
 
@@ -12,11 +12,12 @@ development:
     hostname: localhost
     port: 8980
     log_level: INFO
-    path: /solr
+    path: /solr/development
 
 test:
   solr:
     hostname: localhost
     port: 8981
     log_level: WARNING
-    path: /solr
+    path: /solr/test
+    
