--- a/cookbook/Vagrantfile
+++ b/cookbook/Vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.berkshelf.enabled = true
-  config.omnibus.chef_version = :latest
+  config.omnibus.chef_version = "11.16"
 
   #Force ip4/6 requests to be made seperatly 
   config.vm.provision :shell, inline: "if [ ! $(grep single-request-reopen /etc/sysconfig/network) ]; then echo RES_OPTIONS=single-request-reopen >> /etc/sysconfig/network && service network restart; fi"
