--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -4,3 +4,10 @@ development:
     hostname: 192.168.222.226
     path: /solr/development
     log_level: INFO
+production:
+  solr:
+    solr_home: solr
+    hostname: <%= ENV['SUNSPOT_HOST'] %>
+    port: 8983
+    path: /solr/default
+    log_level: INFO
