--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,6 +1,7 @@
 development:
   solr:
     solr_home: solr
-    hostname: 192.168.222.226
+    hostname: <%= ENV['SUNSPOT_HOST'] %>
+    port: 8982
     path: /solr/development
     log_level: INFO
