--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,14 +1,23 @@
-development:
-  solr:
-    solr_home: solr
-    hostname: <%= ENV['SUNSPOT_HOST'] %>
-    port: 8982
-    path: /solr/development
-    log_level: INFO
 production:
   solr:
-    solr_home: solr
-    hostname: <%= ENV['SUNSPOT_HOST'] %>
+    hostname: localhost
     port: 8983
-    path: /solr/default
+    log_level: WARNING
+    path: /solr/production
+    # read_timeout: 2
+    # open_timeout: 0.5
+
+development:
+  solr:
+    hostname: localhost
+    port: 8982
     log_level: INFO
+    path: /solr/development
+
+test:
+  solr:
+    hostname: localhost
+    port: 8981
+    log_level: WARNING
+    path: /solr/test
+    
